fix: add text color to section styling for improved visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1445,6 +1445,7 @@ section,
   justify-content: center;
   height: 90px;
   width: 95px;
+  color: #fff;
   background:  var(--accent-color);
   border-top: 1px solid #dcd5d5;
   box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.5);
